--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,12 @@ body {
 }
 
 .login input[type="text"] {
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: none;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: none;
+    color: #ffffff;
+    background-color: #2a3942;
 }
 
 .login button[type="submit"] {
